# MaterializationEngine

./: .bumpversion.cfg  .dockerignore  .gitignore  .prod.env  Dockerfile  MANIFEST.ini  build_docker.sh  cloudbuild.yaml  compile_reqs.sh  connection_view.sql  dev  dev.env  dev_requirements.txt  docker-compose.yml  gracefully_shutdown_celery.sh  migrate.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt  run.py  run_local_docker.sh  uwsgi.ini  workflow_backup.yml
.github/workflows/: materialization_ci.yml  release.yml  update-dependency.yml  update-helm-chart.yml
docs/: conf.py
materializationengine/: __init__.py  admin.py  app.py  cache.py  celery_init.py  celery_slack.py  celery_worker.py  chunkedgraph_gateway.py  cloudvolume_gateway.py  config.py  database.py  errors.py  index_manager.py  info_client.py  kvdb_gateway.py  limiter.py  migrate.py  models.py  monitor.py  request_db.py  schemas.py  shared_tasks.py  task.py  task_router.py  taskqueue_worker.py  throttle.py  upsert.py  utils.py  views.py
materializationengine/blueprints/: reset_auth.py
materializationengine/blueprints/client/: api.py  api2.py  cache.py  common.py  datastack.py  new_query.py  precomputed.py  query.py  query_manager.py  schemas.py  utils.py
materializationengine/blueprints/deltalake/: __init__.py  api.py
materializationengine/blueprints/materialize/: api.py  schemas.py
materializationengine/blueprints/upload/: api.py  checkpoint_manager.py  gcs_processor.py  job_status.py  models.py  parallel_csv_tasks.py  processor.py  schema_helper.py  schemas.py  storage.py  tasks.py  wizard.py
materializationengine/blueprints/virtual_datastack/: api.py  models.py  schema.py
materializationengine/workflows/: bulk_upload.py  chunking.py  complete_workflow.py  create_frozen_database.py  deltalake_export.py  dummy_workflow.py  ingest_new_annotations.py  periodic_database_removal.py  periodic_materialization.py  spatial_lookup.py  update_database_workflow.py  update_root_ids.py
migration/: alembic.ini  env.py
migration/versions/: 4006a7c94f25_add_has_timestamp_col.py  8ff84a0bb8f8_base_mat_metadata.py
override/: supervisord.conf
scripts/: release.sh
sentinel/: dev.sentinel.env
static/: style.css
static/js/: active_spatial_workflows.js  deltalakeRunningExports.js  deltalakeStep1.js  deltalakeStep2.js  deltalakeStep3.js  deltalakeWizardStore.js  running_uploads.js  spatial_workflow_details.js  step1.js  step2.js  step3.js  step4.js  wizardStore.js
static/js/modules/: database-handler.js  file-handler.js  metadata-form.js  schema-handler.js  session-manager.js  step-handler.js  validators.js  wizard-manager.js  wizard-navigation.js
templates/: base.html  base_wizard.html  cell_type_local.html  datastack.html  datastacks.html  deltalake_wizard.html  generic.html  loading.html  permission_warning.html  synapses.html  upload_wizard.html  version.html  version_error.html
templates/admin/: 403.html  migration.html
templates/csv_upload/: main.html
templates/csv_upload/steps/step1/: file_upload.html
templates/csv_upload/steps/step2/: schema_select.html
templates/csv_upload/steps/step3/: metadata_form.html
templates/csv_upload/steps/step4/: upload.html
templates/csv_upload/steps/step5/: database_select.html  review.html
templates/deltalake/: running_exports.html  step1.html  step2.html  step3.html
templates/upload/: active_spatial_workflows.html  running_uploads.html  spatial_workflow_details.html  step1.html  step2.html  step3.html  step4.html
tests/: conftest.py  test_bulk_upload.py  test_create_frozen_database.py  test_database.py  test_database_removal.py  test_deltalake_export.py  test_dummy_workflow.py  test_index_manager.py  test_ingest_new_annotations.py  test_models.py  test_shared_tasks.py  test_spaital_lookup.py  test_spatial_lookup.py  test_update_root_ids.py
tests/test_data/: mat_metadata.json
