[build-system]
requires = ["hatchling>=1.26.1"]
build-backend = "hatchling.build"

[project]
name = "materializationengine"
version = "5.12.1"
description = "Combines DynamicAnnotationDB and PyChunkedGraph"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "caveclient>=7.7.0",
    "cloud-volume>=8.5.4",
    "pillow>=8.3.2",
    "psutil>=5.6.6",
    "cloud-files>=4.6.1",
    "pandas",
    "flask>=2.0.2,<3.0",
    "SQLAlchemy<1.4",
    "flask-sqlalchemy",
    "jsonschema",
    "multiwrapper",
    "requests>=2.26.0",
    "middle-auth-client>=3.19.0",
    "marshmallow-sqlalchemy",
    "flask-marshmallow==0.14.0",
    "Flask-Admin",
    "Flask-Cors",
    "flask-restx",
    "flask-accepts",
    "geoalchemy2>=0.9.2",
    "alembic",
    "celery>=5.2.3",
    "cachetools",
    "gevent",
    "gcsfs>=0.8.0",
    "pyarrow",
    "flask_cors",
    "numpy>=1.20",
    "emannotationschemas>=5.24.12",
    "dynamicannotationdb>=5.13.1",
    "nglui>=3.2.1,<4",
    "Flask-Limiter[redis]",
    "cryptography>=44.0.2",
    "uwsgi>=2.0.30",
]
authors = [
    { name = "Forrest Collman", email = "forrestc@alleninstitute.org" },
    { name = "Derrick Brittain", email = "derrickb@alleninstitute.org" }
]

classifiers = [
    "License :: OSI Approved :: MIT License",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-env",
    "ipykernel",
    "bump-my-version",
    "docker",
    "pyOpenSSL",
 ]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]
lint = [
    "ruff"
]
profile = [
    "scalene",
    "pyinstrument",
]

[tool.uv]
default-groups = ["dev", "docs", "lint", "profile"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.bumpversion]
current_version = "5.12.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "v{new_version}"
commit_args = ""
pre_commit_hooks = ['uv sync', 'git add uv.lock']
post_commit_hooks = ["./.bmv-post-commit.sh"]

[[tool.bumpversion.files]]
filename = "materializationengine/__init__.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[tool.ruff]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select=["E9","F63","F7","F82"]

[tool.poe.tasks.drybump]
cmd = "uv run bump-my-version bump --dry-run --verbose"
help = "Dry run of version bump for the project. Use with 'patch', 'minor', or 'major' to specify the version change."

[tool.poe.tasks.bump]
cmd = "uv run bump-my-version bump"
help = "Bump the version number in the project. Use with 'patch', 'minor', or 'major' to specify the version change."

[tool.poe.tasks.test]
cmd = "uv run pytest --cov=materializationengine tests"
help = "Run pytest with code coverage."

[tool.poe.tasks.doc-preview]
cmd = "uv run mkdocs serve"
help = "Preview documentation build locally"

[tool.poe.tasks.profile-all]
cmd = "uv run scalene"
help = "Profile cpu and memory of task with scalene"

[tool.poe.tasks.profile]
cmd = "uv run pyinstrument -r html"
help = "Profile cpu of task with pyinstrument"
