[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.26.1"]

[project]
authors = [
    { name = "Derrick Brittain", email = "derrickb@alleninstitute.org" },
    { name = "Forrest Collman", email = "forrestc@alleninstitute.org" },
]
dependencies = [
    "Flask-Admin",
    "Flask-Cors",
    "Flask-Limiter[redis]",
    "SQLAlchemy<1.4",
    "adbc-driver-postgresql>=1.10.0",
    "alembic",
    "cachetools",
    "caveclient>=7.7.0",
    "celery>=5.2.3",
    "cloud-files>=4.6.1",
    "cloud-volume>=8.5.4",
    "cryptography>=44.0.2",
    "deltalake>=1.5.0",
    "dynamicannotationdb>=5.13.1",
    "emannotationschemas>=5.25.1",
    "flask-accepts",
    "flask-marshmallow==0.14.0",
    "flask-restx",
    "flask-sqlalchemy",
    "flask>=2.0.2,<3.0",
    "flask_cors",
    "gcsfs>=0.8.0",
    "geoalchemy2>=0.9.2",
    "gevent",
    "jsonschema",
    "kvdbclient[extensions]",
    "marshmallow-sqlalchemy",
    "middle-auth-client>=3.19.0",
    "multiwrapper",
    "nglui>=3.2.1,<4",
    "numpy>=1.20",
    "pandas",
    "pillow>=8.3.2",
    "polars>=1.39.3",
    "psutil>=5.6.6",
    "pyarrow",
    "requests>=2.26.0",
]
description = "Combines DynamicAnnotationDB and PyChunkedGraph"
name = "materializationengine"
readme = "README.md"
requires-python = "==3.12.*"
version = "5.16.6"

classifiers = ["License :: OSI Approved :: MIT License"]

[dependency-groups]
deploy = ["uwsgi>=2.0.30"]
dev = [
    "bump-my-version",
    "docker",
    "ipykernel",
    "pyOpenSSL",
    "pytest",
    "pytest-cov",
    "pytest-env",
]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]
lint = ["ruff"]
profile = ["pyinstrument", "scalene"]

[tool.uv]
default-groups = ["dev", "docs", "lint", "profile"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.bumpversion]
allow_dirty = false
commit = true
commit_args = ""
current_version = "5.16.6"
ignore_missing_version = false
message = "v{new_version}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
post_commit_hooks = ["./.bmv-post-commit.sh"]
pre_commit_hooks = ['git add uv.lock', 'uv sync']
regex = false
replace = "{new_version}"
search = "{current_version}"
serialize = ["{major}.{minor}.{patch}"]
sign_tags = false
tag = true
tag_message = "Bump version: {current_version} → {new_version}"
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "materializationengine/__init__.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[tool.ruff]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.poe.tasks.drybump]
cmd = "uv run bump-my-version bump --dry-run --verbose"
help = "Dry run of version bump for the project. Use with 'patch', 'minor', or 'major' to specify the version change."

[tool.poe.tasks.bump]
cmd = "uv run bump-my-version bump"
help = "Bump the version number in the project. Use with 'patch', 'minor', or 'major' to specify the version change."

[tool.poe.tasks.test]
cmd = "uv run pytest --cov=materializationengine tests"
help = "Run pytest with code coverage."

[tool.poe.tasks.doc-preview]
cmd = "uv run mkdocs serve"
help = "Preview documentation build locally"

[tool.poe.tasks.profile-all]
cmd = "uv run scalene"
help = "Profile cpu and memory of task with scalene"

[tool.poe.tasks.profile]
cmd = "uv run pyinstrument -r html"
help = "Profile cpu of task with pyinstrument"
